fix comment spacing

--- a/source/assets/stylesheets/_utilities.scss
+++ b/source/assets/stylesheets/_utilities.scss
@@ -19,6 +19,14 @@
   margin-top: calc(var(--global-space) * 3);
 }
 
+.margin-top--xl {
+  margin-top: calc(var(--global-space) * 4);
+}
+
+.margin-top--xxl {
+  margin-top: calc(var(--global-space) * 5);
+}
+
 .margin-bottom--s {
   margin-bottom: var(--global-space);
 }
@@ -29,4 +37,12 @@
 
 .margin-bottom--l {
   margin-bottom: calc(var(--global-space) * 3);
+}
+
+.margin-bottom--xl {
+  margin-bottom: calc(var(--global-space) * 5);
+}
+
+.margin-bottom--xxl {
+  margin-bottom: calc(var(--global-space) * 5);
 }
